--- a/dev_env/evaluation.ipynb
+++ b/dev_env/evaluation.ipynb
@@ -182,7 +182,7 @@
     "\n",
     "        delta.alias(\"t\").merge(\n",
     "            spark_df.alias(\"s\"),\n",
-    "            \"t.run_id = s.run_id AND t.model_name = s.model_name\"\n",
+    "            \"t.run_name = s.run_name AND t.model_name = s.model_name\"\n",
     "        ).whenMatchedUpdateAll().whenNotMatchedInsertAll().execute()\n",
     "\n",
     "        print(\"🔁 MERGE successful — duplicate rows avoided.\")\n",
