--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -23,13 +23,13 @@
     "from datetime import datetime\n",
     "from pyspark.sql import SparkSession\n",
     "import pandas as pd\n",
+    "from delta.tables import DeltaTable\n",
     "\n",
     "print(\"=\" * 80)\n",
     "print(\"🎯 MODEL REGISTRATION SYSTEM - AUTOMATED & DUPLICATE SAFE\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# ---------------------- LOAD PIPELINE CONFIG ----------------------\n",
-    "\n",
     "try:\n",
     "    with open(\"pipeline_config.yml\", \"r\") as f:\n",
     "        pipeline_cfg = yaml.safe_load(f)\n",
@@ -49,17 +49,14 @@
     "        self.MODEL_NAME = f\"{UC_CATALOG}.{UC_SCHEMA}.{BASE_NAME}_{MODEL_TYPE}\"\n",
     "        self.EXPERIMENT_NAME = pipeline_cfg[\"experiment\"][\"name\"]\n",
     "        self.ARTIFACT_PATH = pipeline_cfg[\"experiment\"][\"artifact_path\"]\n",
-    "\n",
     "        self.PRIMARY_METRIC = pipeline_cfg[\"metrics\"][\"classification\"][\"primary_metric\"]\n",
-    "        \n",
-    "        # Duplicate check settings\n",
+    "\n",
     "        self.TOLERANCE = pipeline_cfg[\"registry\"][\"duplicate_detection\"][\"tolerance\"]\n",
     "        self.METRICS_TO_COMPARE = pipeline_cfg[\"registry\"][\"duplicate_detection\"][\"metrics_to_compare\"]\n",
     "        self.DUPLICATE_CHECK_ENABLED = pipeline_cfg[\"registry\"][\"duplicate_detection\"][\"enabled\"]\n",
     "\n",
     "        self.REGISTRATION_LOG_TABLE = pipeline_cfg[\"tables\"][\"registration_log\"]\n",
     "\n",
-    "        # Slack config (optional)\n",
     "        self.SLACK_WEBHOOK = None\n",
     "        try:\n",
     "            self.SLACK_WEBHOOK = dbutils.secrets.get(\"shared-scope\", \"SLACK_WEBHOOK_URL\")\n",
@@ -76,8 +73,7 @@
     "print(\"=\" * 80)\n",
     "\n",
     "\n",
-    "# ---------------------- SLACK NOTIFIER (Optional) ----------------------\n",
-    "\n",
+    "# ---------------------- SLACK NOTIFIER ----------------------\n",
     "class SlackNotifier:\n",
     "    def __init__(self, webhook_url: Optional[str]):\n",
     "        self.webhook_url = webhook_url\n",
@@ -85,20 +81,19 @@
     "    def send(self, message: str, level: str = \"info\"):\n",
     "        if not self.webhook_url:\n",
     "            return\n",
-    "        \n",
-    "        emoji = {\"info\":\"ℹ️\",\"success\":\"✅\",\"warning\":\"⚠️\",\"error\":\"❌\"}.get(level,\"ℹ️\")\n",
+    "        emoji = {\"info\": \"ℹ️\", \"success\": \"✅\", \"warning\": \"⚠️\", \"error\": \"❌\"}.get(level, \"ℹ️\")\n",
     "        payload = {\"text\": f\"{emoji} {message}\"}\n",
     "\n",
     "        try:\n",
     "            requests.post(self.webhook_url, json=payload, timeout=5)\n",
-    "        except Exception as e:\n",
-    "            print(f\"⚠ Slack send failed: {e}\")\n",
+    "        except:\n",
+    "            pass\n",
+    "\n",
     "\n",
     "slack = SlackNotifier(config.SLACK_WEBHOOK)\n",
     "\n",
     "\n",
-    "# ---------------------- INIT MLFLOW + SPARK ----------------------\n",
-    "\n",
+    "# ---------------------- INIT SPARK + MLFLOW ----------------------\n",
     "spark = SparkSession.builder.appName(\"ModelRegistration\").getOrCreate()\n",
     "mlflow.set_tracking_uri(\"databricks\")\n",
     "mlflow.set_registry_uri(\"databricks-uc\")\n",
@@ -109,258 +104,131 @@
     "    raise Exception(f\"Experiment '{config.EXPERIMENT_NAME}' not found!\")\n",
     "\n",
     "\n",
-    "# ---------------------- AUTO TABLE CREATOR (NEW - FIXED SCHEMA) ----------------------\n",
-    "\n",
+    "# ---------------------- TABLE CREATION ----------------------\n",
     "def ensure_table_exists(table_name: str, df_schema, spark):\n",
-    "    \"\"\"Create delta table automatically if not exists (fixed full schema).\"\"\"\n",
     "    try:\n",
     "        spark.sql(f\"DESCRIBE TABLE {table_name}\")\n",
     "        print(f\"📌 Table exists: {table_name}\")\n",
-    "    except Exception:\n",
-    "        print(f\"🆕 Creating new Delta table: {table_name}\")\n",
-    "\n",
-    "        empty_df = spark.createDataFrame(\n",
-    "            [],\n",
-    "            \"\"\"\n",
-    "                timestamp TIMESTAMP,\n",
-    "                run_id STRING,\n",
-    "                run_name STRING,\n",
-    "                model_name STRING,\n",
-    "                primary_metric STRING,\n",
-    "                primary_metric_value DOUBLE,\n",
-    "                metrics_json STRING,\n",
-    "                params_json STRING,\n",
-    "                registered BOOLEAN,\n",
-    "                registered_version STRING,\n",
-    "                reason STRING\n",
-    "            \"\"\"\n",
-    "        )\n",
-    "\n",
-    "        (\n",
-    "            empty_df.write\n",
-    "            .format(\"delta\")\n",
-    "            .option(\"overwriteSchema\", \"true\")\n",
-    "            .saveAsTable(table_name)\n",
-    "        )\n",
-    "\n",
-    "        print(f\"✅ Table created with correct schema: {table_name}\")\n",
+    "    except:\n",
+    "        print(f\"🆕 Creating Delta table: {table_name}\")\n",
+    "        empty_df = spark.createDataFrame([], df_schema)\n",
+    "        empty_df.write.format(\"delta\").option(\"overwriteSchema\", \"true\").saveAsTable(table_name)\n",
+    "        print(f\"✅ Table created: {table_name}\")\n",
     "\n",
     "\n",
-    "# ---------------------- FETCH ALL RUNS ----------------------\n",
-    "\n",
+    "# ---------------------- FETCH RUNS ----------------------\n",
     "def get_all_runs() -> List[Dict]:\n",
-    "    print(\"\\n📍 Fetching ALL experiment runs...\")\n",
+    "    print(\"\\n📍 Fetching experiment runs...\")\n",
+    "    runs = client.search_runs([experiment.experiment_id], order_by=[f\"metrics.{config.PRIMARY_METRIC} DESC\"], max_results=500)\n",
     "\n",
-    "    runs = client.search_runs(\n",
-    "        [experiment.experiment_id],\n",
-    "        order_by=[f\"metrics.{config.PRIMARY_METRIC} DESC\"],\n",
-    "        max_results=500\n",
-    "    )\n",
-    "\n",
-    "    processed_runs = []\n",
-    "\n",
-    "    for run in runs:\n",
-    "        all_metrics = {m: run.data.metrics.get(m) for m in config.METRICS_TO_COMPARE if m in run.data.metrics}\n",
-    "        model_uri = f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\"\n",
-    "\n",
-    "        processed_runs.append({\n",
-    "            \"run_id\": run.info.run_id,\n",
-    "            \"run_name\": run.info.run_name or \"unnamed_run\",\n",
-    "            \"metrics\": all_metrics,\n",
-    "            \"params\": run.data.params,\n",
-    "            \"primary_metric\": run.data.metrics.get(config.PRIMARY_METRIC),\n",
-    "            \"model_uri\": model_uri\n",
-    "        })\n",
-    "\n",
-    "    print(f\"✅ Found {len(processed_runs)} runs in experiment\")\n",
-    "    return processed_runs\n",
+    "    return [{\n",
+    "        \"run_id\": run.info.run_id,\n",
+    "        \"run_name\": run.info.run_name or \"unnamed_run\",\n",
+    "        \"metrics\": {m: run.data.metrics.get(m) for m in config.METRICS_TO_COMPARE if m in run.data.metrics},\n",
+    "        \"params\": run.data.params,\n",
+    "        \"primary_metric\": run.data.metrics.get(config.PRIMARY_METRIC),\n",
+    "        \"model_uri\": f\"runs:/{run.info.run_id}/{config.ARTIFACT_PATH}\"\n",
+    "    } for run in runs]\n",
     "\n",
     "\n",
-    "# ---------------------- DUPLICATE DETECTION ----------------------\n",
-    "\n",
+    "# ---------------------- DUPLICATE CHECK ----------------------\n",
     "def is_duplicate_model(new_model: Dict) -> bool:\n",
-    "    \"\"\"Check if model with same metrics and params already exists\"\"\"\n",
-    "    \n",
     "    if not config.DUPLICATE_CHECK_ENABLED:\n",
     "        return False\n",
     "\n",
-    "    try:\n",
-    "        versions = client.search_model_versions(f\"name='{config.MODEL_NAME}'\")\n",
-    "    except:\n",
-    "        return False\n",
+    "    versions = client.search_model_versions(f\"name='{config.MODEL_NAME}'\")\n",
     "\n",
     "    for version in versions:\n",
-    "        try:\n",
-    "            run = client.get_run(version.run_id)\n",
+    "        run = client.get_run(version.run_id)\n",
     "\n",
-    "            metric_match = True\n",
-    "            for m in config.METRICS_TO_COMPARE:\n",
-    "                old_val = run.data.metrics.get(m)\n",
-    "                new_val = new_model[\"metrics\"].get(m)\n",
-    "                \n",
-    "                if old_val is not None and new_val is not None:\n",
-    "                    if abs(old_val - new_val) > config.TOLERANCE:\n",
-    "                        metric_match = False\n",
-    "                        break\n",
+    "        metrics_match = all(\n",
+    "            abs((run.data.metrics.get(m) or 0) - (new_model[\"metrics\"].get(m) or 0)) <= config.TOLERANCE\n",
+    "            for m in config.METRICS_TO_COMPARE\n",
+    "        )\n",
     "\n",
-    "            params_match = (new_model[\"params\"] == run.data.params)\n",
+    "        if metrics_match and run.data.params == new_model[\"params\"]:\n",
+    "            print(f\"⚠ Duplicate model = Matches v{version.version}\")\n",
+    "            return True\n",
     "\n",
-    "            if metric_match and params_match:\n",
-    "                print(f\"   ⚠ Duplicate detected → Matches version v{version.version}\")\n",
-    "                return True\n",
-    "        \n",
-    "        except Exception as e:\n",
-    "            print(f\"   ⚠ Error checking version {version.version}: {e}\")\n",
-    "            continue\n",
-    "    \n",
     "    return False\n",
     "\n",
     "\n",
     "# ---------------------- REGISTER MODEL ----------------------\n",
-    "\n",
     "def register_model(model: Dict):\n",
-    "    \"\"\"Register model and add all metadata as tags\"\"\"\n",
-    "    \n",
     "    if is_duplicate_model(model):\n",
-    "        slack.send(f\"⚠ Duplicate skipped: {model['run_name']}\", \"warning\")\n",
+    "        slack.send(f\"⚠ Duplicate Skipped: {model['run_name']}\", \"warning\")\n",
     "        return None\n",
     "\n",
-    "    print(f\"   🔄 Registering model...\")\n",
-    "    new_version = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
-    "    version = new_version.version\n",
-    "\n",
-    "    print(f\"   ✅ Registered as version: {version}\")\n",
-    "    slack.send(f\"✅ Registered: {config.MODEL_NAME} v{version}\", \"success\")\n",
+    "    reg = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
+    "    version = reg.version\n",
     "\n",
     "    try:\n",
-    "        tags = {\n",
-    "            \"run_name\": model[\"run_name\"],\n",
-    "            \"run_id\": model[\"run_id\"],\n",
-    "            \"primary_metric\": config.PRIMARY_METRIC,\n",
-    "            \"primary_metric_value\": str(round(model[\"primary_metric\"], 4)),\n",
-    "            \"artifact_path\": config.ARTIFACT_PATH,\n",
-    "            \"registered_timestamp\": datetime.now().isoformat(),\n",
-    "            \"registered_by\": \"Automated Pipeline\",\n",
-    "            \"params\": json.dumps(model[\"params\"]),\n",
-    "            \"metrics\": json.dumps({k: round(v, 4) for k, v in model[\"metrics\"].items() if v is not None})\n",
-    "        }\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"run_id\", model[\"run_id\"])\n",
+    "        client.set_model_version_tag(config.MODEL_NAME, version, \"primary_metric\", str(model[\"primary_metric\"]))\n",
+    "    except:\n",
+    "        pass\n",
     "\n",
-    "        for key, value in tags.items():\n",
-    "            client.set_model_version_tag(config.MODEL_NAME, version, key, value)\n",
-    "\n",
-    "        client.update_model_version(\n",
-    "            name=config.MODEL_NAME,\n",
-    "            version=version,\n",
-    "            description=(\n",
-    "                f\"📦 Automated Model Registration\\n\\n\"\n",
-    "                f\"🔹 **Run Name:** {model['run_name']}\\n\"\n",
-    "                f\"🔹 **Primary Metric ({config.PRIMARY_METRIC}):** {model['primary_metric']:.4f}\\n\"\n",
-    "                f\"🔹 **Run ID:** {model['run_id']}\\n\"\n",
-    "                f\"📅 **Registered:** {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\\n\\n\"\n",
-    "                f\"**Metrics:**\\n\"\n",
-    "                + \"\\n\".join([f\"  • {k}: {v:.4f}\" for k, v in model[\"metrics\"].items() if v is not None])\n",
-    "            )\n",
-    "        )\n",
-    "\n",
-    "        print(f\"   🏷 Metadata and tags updated\")\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"   ⚠ Failed to set tags: {e}\")\n",
-    "\n",
+    "    print(f\"✅ Registered as version: {version}\")\n",
+    "    slack.send(f\"✅ Registered {config.MODEL_NAME} v{version}\", \"success\")\n",
     "    return version\n",
     "\n",
     "\n",
-    "# ---------------------- LOG DECISION TO TABLE (UPDATED - NO DUPLICATES) ----------------------\n",
-    "\n",
-    "from delta.tables import DeltaTable\n",
-    "\n",
+    "# ---------------------- LOGGING DECISION ----------------------\n",
     "def log_decision(model, registered, version, reason):\n",
-    "    \"\"\"Log registration decision to Delta table with MERGE to avoid duplicates\"\"\"\n",
+    "    df = pd.DataFrame([{\n",
+    "        \"timestamp\": datetime.now(),\n",
+    "        \"run_id\": model[\"run_id\"],\n",
+    "        \"run_name\": model[\"run_name\"],\n",
+    "        \"model_name\": config.MODEL_NAME,\n",
+    "        \"primary_metric\": config.PRIMARY_METRIC,\n",
+    "        \"primary_metric_value\": model[\"primary_metric\"],\n",
+    "        \"metrics_json\": json.dumps(model[\"metrics\"]),\n",
+    "        \"params_json\": json.dumps(model[\"params\"]),\n",
+    "        \"registered\": registered,\n",
+    "        \"registered_version\": str(version) if version else None,\n",
+    "        \"reason\": reason\n",
+    "    }])\n",
     "\n",
-    "    try:\n",
-    "        df = pd.DataFrame([{\n",
-    "            \"timestamp\": datetime.now(),\n",
-    "            \"run_id\": model[\"run_id\"],\n",
-    "            \"run_name\": model[\"run_name\"],\n",
-    "            \"model_name\": config.MODEL_NAME,\n",
-    "            \"primary_metric\": config.PRIMARY_METRIC,\n",
-    "            \"primary_metric_value\": model[\"primary_metric\"],\n",
-    "            \"metrics_json\": json.dumps(model[\"metrics\"]),\n",
-    "            \"params_json\": json.dumps(model[\"params\"]),\n",
-    "            \"registered\": registered,\n",
-    "            \"registered_version\": version,\n",
-    "            \"reason\": reason\n",
-    "        }])\n",
+    "    spark_df = spark.createDataFrame(df)\n",
     "\n",
-    "        spark_df = spark.createDataFrame(df)\n",
+    "    ensure_table_exists(config.REGISTRATION_LOG_TABLE, spark_df.schema, spark)\n",
     "\n",
-    "        ensure_table_exists(config.REGISTRATION_LOG_TABLE, spark_df.schema, spark)\n",
+    "    delta = DeltaTable.forName(spark, config.REGISTRATION_LOG_TABLE)\n",
     "\n",
-    "        try:\n",
-    "            delta_table = DeltaTable.forName(spark, config.REGISTRATION_LOG_TABLE)\n",
+    "    delta.alias(\"t\").merge(\n",
+    "        spark_df.alias(\"s\"),\n",
+    "        \"t.run_name = s.run_name AND t.model_name = s.model_name\"\n",
+    "    ).whenMatchedUpdateAll().whenNotMatchedInsertAll().execute()\n",
     "\n",
-    "            delta_table.alias(\"t\").merge(\n",
-    "                spark_df.alias(\"s\"),\n",
-    "                \"\"\"\n",
-    "                t.run_id = s.run_id\n",
-    "                AND t.model_name = s.model_name\n",
-    "                AND t.registered_version = s.registered_version\n",
-    "                \"\"\"\n",
-    "            ) \\\n",
-    "            .whenMatchedUpdateAll() \\\n",
-    "            .whenNotMatchedInsertAll() \\\n",
-    "            .execute()\n",
-    "\n",
-    "            print(f\"🔁 MERGE successful → No duplicate row added.\")\n",
-    "\n",
-    "        except Exception:\n",
-    "            spark_df.write.format(\"delta\").mode(\"append\").saveAsTable(config.REGISTRATION_LOG_TABLE)\n",
-    "\n",
-    "        print(f\"   📄 Logged to: {config.REGISTRATION_LOG_TABLE}\")\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"   ⚠ Failed to log decision: {e}\")\n",
+    "    print(\"📄 Logged.\")\n",
     "\n",
     "\n",
-    "# ---------------------- MAIN EXECUTION ----------------------\n",
-    "\n",
+    "# ---------------------- MAIN ----------------------\n",
     "def main():\n",
-    "    print(\"\\n🚀 Starting Model Registration Pipeline...\\n\")\n",
-    "    \n",
-    "    runs = get_all_runs()\n",
+    "    print(\"\\n🚀 Starting Model Registration...\\n\")\n",
     "\n",
+    "    runs = get_all_runs()\n",
     "    if not runs:\n",
-    "        print(\"❌ No runs found in experiment!\")\n",
+    "        print(\"❌ No runs found!\")\n",
     "        return\n",
     "\n",
-    "    registered_count = 0\n",
-    "    skipped_count = 0\n",
+    "    registered = skipped = 0\n",
     "\n",
     "    for idx, model in enumerate(runs, start=1):\n",
-    "        print(f\"\\n{'='*80}\")\n",
-    "        print(f\"[{idx}/{len(runs)}] Processing: {model['run_name']}\")\n",
-    "        print(f\"   Primary Metric ({config.PRIMARY_METRIC}): {model['primary_metric']:.4f}\")\n",
-    "        print(f\"{'='*80}\")\n",
+    "        print(f\"\\n{'='*80}\\n[{idx}/{len(runs)}] → {model['run_name']} (Metric: {model['primary_metric']})\")\n",
     "\n",
     "        version = register_model(model)\n",
     "\n",
     "        if version:\n",
-    "            log_decision(model, True, version, \"✔ Registered successfully\")\n",
-    "            registered_count += 1\n",
+    "            log_decision(model, True, version, \"✔ Registered\")\n",
+    "            registered += 1\n",
     "        else:\n",
-    "            log_decision(model, False, None, \"⚠ Duplicate - Skipped\")\n",
-    "            skipped_count += 1\n",
+    "            log_decision(model, False, None, \"⚠ Duplicate Skipped\")\n",
+    "            skipped += 1\n",
     "\n",
-    "    print(\"\\n\" + \"=\"*80)\n",
-    "    print(\"🎉 REGISTRATION PIPELINE COMPLETED\")\n",
-    "    print(\"=\"*80)\n",
-    "    print(f\"✅ Models Registered: {registered_count}\")\n",
-    "    print(f\"⚠ Duplicates Skipped: {skipped_count}\")\n",
-    "    print(f\"📊 Total Processed: {len(runs)}\")\n",
-    "    print(f\"📦 Model Name: {config.MODEL_NAME}\")\n",
-    "    print(\"=\" * 80)\n",
-    "\n",
-    "    slack.send(f\"📁 Registration complete: {registered_count} registered, {skipped_count} skipped\", \"info\")\n",
+    "    print(\"\\n🎉 Completed!\\n\")\n",
+    "    print(f\"✔ Registered: {registered}\")\n",
+    "    print(f\"⚠ Skipped: {skipped}\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
