--- a/dev_env/register.ipynb
+++ b/dev_env/register.ipynb
@@ -156,7 +156,6 @@
     "# ---------------------- REGISTER MODEL ----------------------\n",
     "def register_model(model: Dict):\n",
     "    if is_duplicate_model(model):\n",
-    "        slack.send(f\"⚠ Duplicate Skipped: {model['run_name']}\", \"warning\")\n",
     "        return None\n",
     "\n",
     "    reg = mlflow.register_model(model[\"model_uri\"], config.MODEL_NAME)\n",
@@ -191,6 +190,8 @@
     "\n",
     "    spark_df = spark.createDataFrame(df)\n",
     "\n",
+    "    spark_df = spark_df.withColumn(\"registered_version\", spark_df.registered_version.cast(\"string\"))\n",
+    "\n",
     "    ensure_table_exists(config.REGISTRATION_LOG_TABLE, spark_df.schema, spark)\n",
     "\n",
     "    delta = DeltaTable.forName(spark, config.REGISTRATION_LOG_TABLE)\n",
@@ -214,7 +215,16 @@
     "\n",
     "    registered = skipped = 0\n",
     "\n",
+    "    processed_runs = set()  # 🔥 FEEDBACK FIX\n",
+    "\n",
     "    for idx, model in enumerate(runs, start=1):\n",
+    "\n",
+    "        # Skip duplicate Slack/log execution for same run_id\n",
+    "        if model['run_id'] in processed_runs:\n",
+    "            continue\n",
+    "\n",
+    "        processed_runs.add(model['run_id'])\n",
+    "\n",
     "        print(f\"\\n{'='*80}\\n[{idx}/{len(runs)}] → {model['run_name']} (Metric: {model['primary_metric']})\")\n",
     "\n",
     "        version = register_model(model)\n",
@@ -223,6 +233,7 @@
     "            log_decision(model, True, version, \"✔ Registered\")\n",
     "            registered += 1\n",
     "        else:\n",
+    "            slack.send(f\"⚠ Duplicate Skipped: {model['run_name']}\", \"warning\")\n",
     "            log_decision(model, False, None, \"⚠ Duplicate Skipped\")\n",
     "            skipped += 1\n",
     "\n",
